--- a/Index.html
+++ b/Index.html
@@ -48,24 +48,51 @@
         }
 
         .main-slots {
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 20px;
-            border: 2px solid #FF4500;
-            padding: 10px;
-            border-radius: 10px;
-        }
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    border: 2px solid #FF4500; /* Borde del inventario */
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #1e1e1e; /* Fondo oscuro del inventario */
+    box-shadow: 0 0 10px rgba(255, 69, 0, 0.5); /* Sombra para resaltar */
+}
 
-        .main-slot {
-            width: 50px;
-            height: 50px;
-            border: 1px solid #FF4500;
-            margin: 5px;
-            background-color: #222;
-            position: relative;
-            text-align: center;
-            line-height: 50px;
-        }
+.main-slot {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #FF4500; /* Borde de cada slot */
+    margin: 5px;
+    background-color: #222; /* Color de fondo del slot */
+    position: relative;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 5px; /* Esquinas redondeadas */
+    transition: background-color 0.3s; /* Transición suave al pasar el mouse */
+}
+
+.main-slot:hover {
+    background-color: #333; /* Cambio de color al pasar el mouse */
+}
+
+.main-slot:empty::before {
+    content: ' '; /* Espacio para mostrar el slot vacío */
+    background-color: rgba(255, 69, 0, 0.2); /* Fondo para slots vacíos */
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.main-slot img {
+    max-width: 100%; /* Ajusta las imágenes dentro de los slots */
+    max-height: 100%;
+    border-radius: 5px;
+}
+
+        
 
         .small-slot {
             width: 40px;
