--- a/Index.html
+++ b/Index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kits Generator - Rust Style</title>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Press Start 2P', sans-serif;
-            background-color: #1e1e1e;
-            color: #fff;
-            margin: 0;
-            padding: 20px;
-        }
+    font-family: 'Russo One', sans-serif; /* Aplica la fuente Russo One */
+    background-color: #1e1e1e;
+    color: #fff;
+    margin: 0;
+    padding: 20px;
+}
 
-        h1 {
-            text-align: center;
-            font-size: 2.5em;
-            color: #FF4500;
-            text-shadow: 2px 2px 4px #000;
-        }
+h3 {
+    text-align: center;
+    color: #FF4500;
+    text-shadow: 1px 1px 2px #000;
+    margin-top: 20px;
+}
 
         label {
             display: block;
